# windows-app-rs

./: .gitignore  Cargo.toml
crates/app/: Cargo.toml
crates/samples/xamlapp/: Cargo.toml  build.rs
src/: lib.rs
src/Microsoft/: mod.rs
src/Microsoft/Graphics/DirectX/: mod.rs
src/Microsoft/UI/: mod.rs
src/Microsoft/UI/Composition/: mod.rs
src/Microsoft/UI/Composition/Core/: mod.rs
src/Microsoft/UI/Composition/Diagnostics/: mod.rs
src/Microsoft/UI/Composition/Effects/: mod.rs
src/Microsoft/UI/Composition/Interactions/: mod.rs
src/Microsoft/UI/Composition/Scenes/: mod.rs
src/Microsoft/UI/Composition/SystemBackdrops/: mod.rs
src/Microsoft/UI/Dispatching/: mod.rs
src/Microsoft/UI/Input/: mod.rs
src/Microsoft/UI/Input/Interop/: mod.rs
src/Microsoft/UI/Text/: mod.rs
src/Microsoft/UI/Windowing/: mod.rs
src/Microsoft/UI/Xaml/: mod.rs
src/Microsoft/UI/Xaml/Automation/: mod.rs
src/Microsoft/UI/Xaml/Automation/Provider/: mod.rs
src/Microsoft/UI/Xaml/Automation/Text/: mod.rs
src/Microsoft/UI/Xaml/Controls/AnimatedVisuals/: mod.rs
src/Microsoft/UI/Xaml/Data/: mod.rs
src/Microsoft/UI/Xaml/Documents/: mod.rs
src/Microsoft/UI/Xaml/Hosting/: mod.rs
src/Microsoft/UI/Xaml/Input/: mod.rs
src/Microsoft/UI/Xaml/Interop/: mod.rs
src/Microsoft/UI/Xaml/Markup/: mod.rs
src/Microsoft/UI/Xaml/Media/: mod.rs
src/Microsoft/UI/Xaml/Media/Animation/: mod.rs
src/Microsoft/UI/Xaml/Media/Imaging/: mod.rs
src/Microsoft/UI/Xaml/Media/Media3D/: mod.rs
src/Microsoft/UI/Xaml/Navigation/: mod.rs
src/Microsoft/UI/Xaml/Printing/: mod.rs
src/Microsoft/UI/Xaml/Resources/: mod.rs
src/Microsoft/UI/Xaml/Shapes/: mod.rs
src/Microsoft/UI/Xaml/XamlTypeInfo/: mod.rs
src/Microsoft/Web/WebView2/Core/: mod.rs
src/Microsoft/Windows/AppLifecycle/: mod.rs
src/Microsoft/Windows/ApplicationModel/DynamicDependency/: mod.rs
src/Microsoft/Windows/ApplicationModel/Resources/: mod.rs
src/Microsoft/Windows/ApplicationModel/WindowsAppRuntime/: mod.rs
src/Microsoft/Windows/PushNotifications/: mod.rs
src/Microsoft/Windows/System/: mod.rs
src/Microsoft/Windows/System/Power/: mod.rs
src/Microsoft/WindowsAppSDK/: mod.rs
src/Microsoft/WindowsAppSDK/Foundation/: mod.rs
src/Microsoft/WindowsAppSdk/Foundation/: mod.rs
src/bootstrap/: mod.rs
