
[package]
name = "windows-app"
version = "0.0.0"
edition = "2018"
authors = []
license = ""
description = ""
repository = ""
documentation = ""
readme = ""
exclude = []
publish = false

[workspace]
members = ["crates/gen"]

[dependencies.windows]
version = "0.24"
features = []

[features]
Foundation = []
Graphics = []
Graphics_DirectX = ["Graphics"]
UI = []
UI_Composition = ["UI"]
UI_Composition_Core = ["UI_Composition"]
UI_Composition_Diagnostics = ["UI_Composition"]
UI_Composition_Effects = ["UI_Composition"]
UI_Composition_Interactions = ["UI_Composition"]
UI_Composition_Scenes = ["UI_Composition"]
UI_Composition_SystemBackdrops = ["UI_Composition"]
UI_Dispatching = ["UI"]
UI_Input = ["UI"]
UI_Input_Interop = ["UI_Input"]
UI_Text = ["UI"]
UI_Windowing = ["UI"]
UI_Xaml = ["UI"]
UI_Xaml_Automation = ["UI_Xaml"]
UI_Xaml_Automation_Peers = ["UI_Xaml_Automation"]
UI_Xaml_Automation_Provider = ["UI_Xaml_Automation"]
UI_Xaml_Automation_Text = ["UI_Xaml_Automation"]
UI_Xaml_Controls = ["UI_Xaml"]
UI_Xaml_Controls_AnimatedVisuals = ["UI_Xaml_Controls"]
UI_Xaml_Controls_Primitives = ["UI_Xaml_Controls"]
UI_Xaml_Core = ["UI_Xaml"]
UI_Xaml_Core_Direct = ["UI_Xaml_Core"]
UI_Xaml_Data = ["UI_Xaml"]
UI_Xaml_Documents = ["UI_Xaml"]
UI_Xaml_Hosting = ["UI_Xaml"]
UI_Xaml_Input = ["UI_Xaml"]
UI_Xaml_Interop = ["UI_Xaml"]
UI_Xaml_Markup = ["UI_Xaml"]
UI_Xaml_Media = ["UI_Xaml"]
UI_Xaml_Media_Animation = ["UI_Xaml_Media"]
UI_Xaml_Media_Imaging = ["UI_Xaml_Media"]
UI_Xaml_Media_Media3D = ["UI_Xaml_Media"]
UI_Xaml_Navigation = ["UI_Xaml"]
UI_Xaml_Printing = ["UI_Xaml"]
UI_Xaml_Resources = ["UI_Xaml"]
UI_Xaml_Shapes = ["UI_Xaml"]
UI_Xaml_XamlTypeInfo = ["UI_Xaml"]
Web = []
Web_WebView2 = ["Web"]
Web_WebView2_Core = ["Web_WebView2"]
Windows = []
Windows_AppLifecycle = ["Windows"]
Windows_ApplicationModel = ["Windows"]
Windows_ApplicationModel_DynamicDependency = ["Windows_ApplicationModel"]
Windows_ApplicationModel_Resources = ["Windows_ApplicationModel"]
Windows_ApplicationModel_WindowsAppRuntime = ["Windows_ApplicationModel"]
Windows_PushNotifications = ["Windows"]
Windows_System = ["Windows"]
Windows_System_Power = ["Windows_System"]
WindowsAppSDK = []
WindowsAppSDK_Foundation = ["WindowsAppSDK"]
